--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
         <div class="row">
             <h3>Champions League 2020</h3>
         </div>
-        <div>
-            
+        <div class="row">
+            <div class="col-md-12">
+                <button class="btn btn-primary" @click="criarNovoJogo">Novo Jogo</button>
+            </div>
         </div>
-
+        <div>   
+        </div>
+        <input type="text" class="form-control" v-model="novoJogo.casa.gols">
+        {{novoJogo.casa.time ? novoJogo.casa.time.nome: ''}}
+        <input type="text" class="form-control" v-model="novoJogo.fora.gols">
+        {{novoJogo.fora.time ? novoJogo.fora.time.nome: ''}}
+        <button class="btn btn-primary" @click="showAlert">Fim de Jogo</button>
         <table class="table table-striped">
             <thead>
             <tr>
@@ -48,8 +56,7 @@
                 </tr>
             </tbody>
         </table>
-        <input type="text" v-model="gols"> {{gols}}
-        <button class="btn btn-primary" @click="showAlert">Fim de Jogo</button>
+        
     </div>
 
         <!-- versão de desenvolvimento, inclui avisos úteis no console  -->
@@ -76,11 +83,31 @@
                 new Time('Barcelona'),
                 new Time('Juventos'),
                 new Time('PSG')
-            ]
+            ],
+            novoJogo: {
+                casa: {
+                    time: null,
+                    gols: 0
+                },
+                fora: {
+                    time: null,
+                    gols: 0
+                }
+            }
         },
         methods: {
             showAlert(){
                 alert('Fim de jogo!')
+            },
+            criarNovoJogo(){
+                var indiceCasa = Math.floor(Math.random()*4),
+                    indiceFora = Math.floor(Math.random()*4)
+
+                this.novoJogo.casa.time = this.times[indiceCasa];
+                this.novoJogo.casa.gols = 0;
+                this.novoJogo.fora.time = this.times[indiceFora];
+                this.novoJogo.fora.gols = 0;
+
             }
         }
     })
