--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 </form>
             </div>
             <div class="col-md-12" v-show="visao === 'tabela'">
+            <input type="text" class="form-control" v-model="busca">
             <table class="table table-striped">
                 <thead>
                 <tr>
@@ -52,7 +53,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr v-for="time in timesOrdenados">
+                    <tr v-for="time in timesFiltrados">
                         <td>
                             <img :src="time.escudo" alt="" class="escudo">
                             {{time.nome}}
@@ -154,15 +155,16 @@
         el: "#app",
         data: {
             gols: '3',
+            busca: '',
             ordem: {
                 colunas: ['pontos', 'gm', 'gs', 'saldo'],
                 orientacao: ['desc', 'desc', 'asc', 'saldo']
             },
             times: [
-                new Time('Real Madrid', 'assets/realmadrid.png'),
-                new Time('Barcelona','assets/realmadrid.png'),
-                new Time('Juventos','assets/realmadrid.png'),
-                new Time('PSG','assets/realmadrid.png')
+                new Time('Real Madrid'),
+                new Time('Barcelona'),
+                new Time('Juventos'),
+                new Time('PSG')
             ],
             novoJogo: {
                 casa: {
@@ -181,11 +183,16 @@
                 return this.times.slice(0,6);
             },
             timesRebaixados() {
-                return this.times.slice(15,20);
+                return this.times.slice(16,20);
             },
-            timesOrdenados() {
-                return _.orderBy(this.times, this.ordem.colunas, this.oredem.orientacao)
-            }
+            timesFiltrados() {
+                var times =  _.orderBy(this.times, this.ordem.colunas, this.ordem.orientacao);
+                var self = this;
+                return _.filter(times, function(time){
+                    var busca = self.busca.toLowerCase();
+                    return time.nome.toLowerCase().indexOf(busca) >= 0;
+                })
+            }  
         },
 
         methods: {
